# rotor

./: .gitignore  BENCHMARKS.md  LICENSE  PLAN.md  README.md  ROADMAP.md  pyproject.toml
examples/: buffer_overflow.py  equivalence_check.py  ic3_proof.py  input_synthesis.py
rotor/: __init__.py  api.py  bench.py  binary.py  cegar.py  cli.py  dwarf.py  engine.py  expr.py  instance.py  trace.py  witness.py
rotor/btor2/: __init__.py  builder.py  nodes.py  parser.py  printer.py
rotor/ir/: __init__.py  dag.py  emitter.py  liveness.py  spec.py  ssa.py
rotor/riscv/: __init__.py  disasm.py  support.py
rotor/solvers/: __init__.py  base.py  bitwuzla.py  bmc.py  btormc.py  cvc5bmc.py  ic3.py  kind.py  pono.py  portfolio.py  ric3.py  z3bv.py  z3spacer.py
tests/: test_binary.py  test_bmc_unroller.py  test_btor2.py  test_cli.py  test_disasm.py  test_dwarf.py  test_engine.py  test_expr.py  test_instance.py  test_integration.py  test_integration_bmc.py  test_integration_kinduction.py  test_integration_syscalls.py  test_kinduction.py  test_riscv_isa.py  test_riscv_loads_stores.py  test_solvers.py  test_support.py  test_syscalls.py  test_trace.py  test_witness.py
tests/equivalence/: corpus.py  test_dag_size.py  test_l0_equivalence.py  test_ssa_size.py
tests/fixtures/: README.md  add2.c  add2.elf  bitops.c  bitops.elf  branches.c  branches.elf  build.sh  counter.c  counter.elf  memops.c  memops.elf  mult.c  mult.elf  nonleaf.c  nonleaf.elf  readbyte.c  readbyte.elf  readsum.c  readsum.elf  rodata.c  rodata.elf  rvc.c  rvc.elf  sum.c  sum.elf
tests/integration/: test_api_unbounded.py  test_bitwuzla_portfolio.py  test_can_reach.py  test_cegar.py  test_cvc5_portfolio.py  test_equivalent.py  test_find_input.py  test_ic3_counter.py  test_memops.py  test_mult.py  test_nonleaf.py  test_portfolio_cli.py  test_rvc.py  (+3 more)
(+34 files in other folders)
